<resources>
    <string name="app_name">Gestion_inventarios</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrar">Registrar</string>
    <!--Registro-->
    <string name="tvRegitro">Registro de usuario</string>
    <string name="tvRegistroNombre">Ingrese su nombre de usuario:</string>
    <string name="tvRegistroCorreo">Ingrese su correo electrónico:</string>
    <string name="tvRegistroContrasena">Ingrese una contraseña:</string>
    <string name="tvRegistroConfirmacion">Confirme su contraseña:</string>
    <string name="etRegistroCorreo">Correo</string>
    <string name="etRegistrarContrasena">Contraseña</string>
    <string name="etRegistrarNombre">Nombre</string>
    <!--Ingreso-->
    <string name="tvIngresarTitulo">Bienvenido</string>
    <string name="tvInicioSecion">Inicio de sesión</string>
    <string name="tvIngresoUsuario">Ingrese su nombre de usuario:</string>
    <string name="tvIngresoContrasena">Ingrese una contraseña:</string>
    <string name="etIngresoNombre">Nombre de usuario</string>
    <string name="etIngresoContrasena">Contraseña</string>
    <string name="BtnInicioSesion">Iniciar sesión</string>
    <string name="title_activity_menu2">menu2</string>
    <string name="btnBiometric">Huella</string>

    <!--Activity Menu principal-->
    <string name="tvNameUser">nombre usario</string>
    <string name="btnAddCategory">Agregar Categoria</string>
    <!--Activity Configuracion-->
    <string name="tvTituloConfiguracion">Configuracion</string>
    <string name="btnEliminarCategoria">Eliminar categoria</string>
    <string name="btnBorrarDatos">Borrar datos</string>
    <string name="btnCrearNuevaCuenta">Crear nueva cuenta</string>
    <string name="btnCerrarSesion">Cerra sesion</string>

    <!--Activity Crear nueva categoria -->
    <string name="tvCrearNuevaCategoria">Crear nueva categoria</string>
    <string name="tvIngreseNombreCategoria">Ingrese nombre de la categoria: </string>
    <string name="etNombreCategoria">nombre de la categoria</string>
    <string name="tvIntroduzcaNombreHerramientaMaterial">Introduzca el nombre de la herramienta o material: </string>
    <string name="etiNombreHerramientaMaterial">nombre</string>
    <string name="tvIconoCategoria">Elija el icono de la categoria</string>
    <string name="btnCrear">Crear</string>
    <string name="btnAdd">añadir</string>
    <!--Page Editar perfil-->
    <string name="tvEditarPerfil">EditarPerfil</string>
    <string name="btnCambiarFotoPerfil">Cambiar foto de perfil</string>
    <string name="tvCambiarNombreUsuario">nombre de usuario</string>
    <string name="etCambiarNombreUsuario">Ingresa el nuevo nombre de usuario</string>
    <string name="tvCambiarContraseña">Ingresa la nueva contraseña</string>
    <string name="etCambiarContraseña">Nueva contraseña</string>
    <string name="tvConfirmarContraseña">Confirmar la nueva contraseña</string>
    <string name="etConfirmarContraseña">Confirmar la nueva contraseña</string>
    <string name="btnAplicarCambios">Aplicar cambios</string>
    <!--activity nav-->
    <string name="btnEditProfile">editar cuenta</string>
    <string name="btnEditCategory">editar Categoria</string>
    <string name="btnDeleteCategory">eliminar categoria</string>
    <!-- activity category-->
    <string name="btnAgregar">agregar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_delete_category">deleteCategory</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--eliminarCategoria-->

    <string name="tvDeleteCategory">Eliminar Categoria</string>
    <!--eliminar datos-->
    <string name="tvavisoEliminar">estas seguro de eliminar todos los todos de inventarios relacionados a esta cuenta?</string>
    <string name="tvEliminarDatos">Eliminar Datos</string>
    <string name="btnEliminarDatos">Eliminar</string>

</resources>