<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".deleteData"
    android:orientation="vertical"
    android:background="@color/verdeClaro">

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verdeClaro"
        android:contentDescription="back"
        android:src="@drawable/izquierda" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/tvEliminarDatos"
        android:textColor="@color/verdeDarkest"
        android:textSize="40dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/st_container2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="295dp"
            android:layout_height="99dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/tvavisoEliminar"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnEliminarDatos"
            android:layout_width="117dp"
            android:layout_height="60dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="200dp"
            android:backgroundTint="@color/verdeDarkest"
            android:text="@string/btnEliminarDatos" />
    </RelativeLayout>

</LinearLayout>