<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/verde">

        <ImageButton
            android:id="@+id/btnBackConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde"
            android:contentDescription="back"
            android:src="@drawable/izquierda" />

        <TextView
            android:id="@+id/tvTituloConfiguracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/verdeOscuro"
            android:text="@string/tvTituloConfiguracion" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/st_container2">

            <Button
                android:id="@+id/btnEliminarCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="124dp"
                android:layout_marginRight="164dp"
                android:backgroundTint="@color/verde"
                android:textColor="@color/verdeOscuro"
                android:text="@string/btnEliminarCategoria" />

            <Button
                android:id="@+id/btnBorraDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="164dp"
                android:backgroundTint="@color/verde"
                android:textColor="@color/verdeOscuro"
                android:text="@string/btnBorrarDatos" />

            <Button
                android:id="@+id/btnCrearNuevaCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="164dp"
                android:backgroundTint="@color/verde"
                android:textColor="@color/verdeOscuro"
                android:text="@string/btnCrearNuevaCategoria" />

            <Button
                android:id="@+id/btnCerrarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="200dp"
                android:layout_marginRight="164dp"
                android:backgroundTint="@color/verde"
                android:textColor="@color/verdeOscuro"
                android:text="@string/btnCerrarSesion" />
        </TableLayout>
    </LinearLayout>

</FrameLayout>